# cde-estimator

./: .gitignore  CHANGELOG.md  LICENSE  PUBLISHING_GUIDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/cde_estimator/: __init__.py  constraints.py  estimator.py  exceptions.py  precision.py  solver.py  utils.py
tests/: test_constraints.py  test_precision.py  test_solver.py  test_utils.py
