[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cde-estimator"
version = "0.2.0"
description = "Constrained Dantzig-type Estimator for high-dimensional portfolio selection with inequality constraints"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "zhudechuan"},
    {name = "Chi Seng Pun"},
]
keywords = [
    "portfolio-optimization",
    "high-dimensional-statistics",
    "sparse-estimation",
    "dantzig-selector",
    "constrained-optimization",
    "mixed-integer-programming",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "docplex>=2.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/zhudechuan/cde-estimator"
Documentation = "https://github.com/zhudechuan/cde-estimator#readme"
Repository = "https://github.com/zhudechuan/cde-estimator"
Issues = "https://github.com/zhudechuan/cde-estimator/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = [
    "D100", "D104",       # missing module/package docstrings
    "D101", "D102",       # missing class/method docstrings
    "D204", "D301",       # docstring formatting
    "N802", "N803", "N806", # uppercase variable/argument names (math convention)
    "E741", "E743",       # ambiguous variable names (l, I, O — common in math)
    "E501",               # line too long (docstrings, math expressions)
    "UP006", "UP035", "UP045", # typing deprecations — need Optional for Python 3.9 compat
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
